Refactoring of the plugin to support running multiple instances of elastic search in a build. The instances can be configured through multiple executions, and depend on the clustername to ensure that start/stop commands are applied to the same elasticsearch instance.

--- a/src/test/resources/goals/load/pom.xml
+++ b/src/test/resources/goals/load/pom.xml
@@ -12,6 +12,8 @@
 				<artifactId>elasticsearch-maven-plugin</artifactId>
 				<configuration>
 					<scriptFile>src/test/resources/goals/load/load.script</scriptFile>
+					<clusterName>test</clusterName>
+					<httpPort>9200</httpPort>
 				</configuration>
 			</plugin>
 		</plugins>
