--- a/src/test/resources/goals/stop/pom.xml
+++ b/src/test/resources/goals/stop/pom.xml
@@ -11,6 +11,7 @@
 				<groupId>com.github.alexcojocaru</groupId>
 				<artifactId>elasticsearch-maven-plugin</artifactId>
 				<configuration>
+					<clusterName>test</clusterName>
 				</configuration>
 			</plugin>
 		</plugins>
