configure automatic index creation

--- a/src/test/resources/goals/start/pom.xml
+++ b/src/test/resources/goals/start/pom.xml
@@ -17,6 +17,7 @@
 					<clusterName>test</clusterName>
 					<tcpPort>9300</tcpPort>
 					<httpPort>9200</httpPort>
+					<autoCreateIndex>true</autoCreateIndex>
 				</configuration>
 			</plugin>
 		</plugins>
