Use random open ports during testing.
When multiple builds are executed in parallel, some tests fail for they
cannot bind to an already used port.

Conflicts:
	src/main/java/com/github/alexcojocaru/mojo/elasticsearch/ElasticsearchNode.java

--- a/src/test/resources/goals/start/pom.xml
+++ b/src/test/resources/goals/start/pom.xml
@@ -15,8 +15,7 @@
 					<dataDirname>elasticsearch-data</dataDirname>
 					<logsDirname>elasticsearch-logs</logsDirname>
 					<clusterName>test</clusterName>
-					<tcpPort>9300</tcpPort>
-					<httpPort>9200</httpPort>
+					<!-- the http.port and tcp.port are provided dynamically in the MojoTest -->
 				</configuration>
 			</plugin>
 		</plugins>
