--- a/src/test/resources/goals/stop/pom.xml
+++ b/src/test/resources/goals/stop/pom.xml
@@ -12,6 +12,7 @@
 				<artifactId>elasticsearch-maven-plugin</artifactId>
 				<configuration>
 					<clusterName>test</clusterName>
+					<!-- the http.port and tcp.port are provided dynamically in the MojoTest -->
 				</configuration>
 			</plugin>
 		</plugins>
