--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>2.0.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
