added skip feature to start, run and load data goals, defaults to false

--- a/src/test/resources/goals/load/pom.xml
+++ b/src/test/resources/goals/load/pom.xml
@@ -13,7 +13,7 @@
 				<configuration>
 					<scriptFile>src/test/resources/goals/load/load.script</scriptFile>
 					<clusterName>test</clusterName>
-					<!-- the http.port and tcp.port are provided dynamically in the MojoTest -->
+					<!-- the http.port and tcp.port and skip are provided dynamically in the MojoTest -->
 				</configuration>
 			</plugin>
 		</plugins>
