--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.github.alexcojocaru</groupId>
 	<artifactId>elasticsearch-maven-plugin</artifactId>
-	<version>2.1</version>
+	<version>2.2-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Elasticsearch Maven Plugin</name>
@@ -27,7 +27,7 @@
 		<url>git@github.com:alexcojocaru/elasticsearch-maven-plugin.git</url>
 		<connection>scm:git:git@github.com:alexcojocaru/elasticsearch-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:alexcojocaru/elasticsearch-maven-plugin.git</developerConnection>
-	  <tag>elasticsearch-maven-plugin-2.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<developers>
 		<developer>
