--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 			<version>3.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- required for logging support -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
