create IT framework; refactored ITs; added IT for skip / autoCreateIndex

--- a/src/it/runforked-skip/pom.xml
+++ b/src/it/runforked-skip/pom.xml
@@ -49,6 +49,7 @@
 				<artifactId>elasticsearch-maven-plugin</artifactId>
 				<version>@project.version@</version>
 				<configuration>
+					<skip>true</skip>
 				</configuration>
 				<executions>
 					<execution>
