--- a/pom.xml
+++ b/pom.xml
@@ -110,17 +110,16 @@
 			<artifactId>awaitility</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.2.17</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>2.2.17</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -163,6 +162,18 @@
 					</execution>
 				</executions>
 			</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.0.2</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>test-jar</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-invoker-plugin</artifactId>
@@ -170,6 +181,12 @@
 				<configuration>
 					<addTestClassPath>true</addTestClassPath>
 					<debug>false</debug>
+					<!--
+						running the ITs in parallel fails some ITs,
+						with errors around resolving dependencies (always junit);
+						some ITs pass though
+					<parallelThreads>4</parallelThreads>
+					-->
 					<streamLogs>true</streamLogs>
 					<projectsDirectory>src/it</projectsDirectory>
 					<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
