--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,11 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
+			<!--
+				Release with:
+				$ mvn release:clean release:prepare
+				$ mvn release:perform
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
