--- a/pom.xml
+++ b/pom.xml
@@ -177,18 +177,18 @@
 					</execution>
 				</executions>
 			</plugin>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-jar-plugin</artifactId>
-			<version>3.0.2</version>
-			<executions>
-				<execution>
-					<goals>
-						<goal>test-jar</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-invoker-plugin</artifactId>
@@ -203,13 +203,17 @@
 					<parallelThreads>4</parallelThreads>
 					-->
 					<streamLogs>true</streamLogs>
+					<!-- copy tests from here -->
 					<projectsDirectory>src/it</projectsDirectory>
+					<!-- copy tests to here -->
 					<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+					<!-- execute these files -->
 					<pomIncludes>
 						<pomInclude>*/pom.xml</pomInclude>
 					</pomIncludes>
 					<preBuildHookScript>setup</preBuildHookScript>
 					<postBuildHookScript>verify</postBuildHookScript>
+					<!-- configure the maven process to run each test -->
 					<localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
 					<settingsFile>src/it/settings.xml</settingsFile>
 					<!--
