--- a/src/it/runforked-defaults-es6/pom.xml
+++ b/src/it/runforked-defaults-es6/pom.xml
@@ -49,7 +49,7 @@
 				<artifactId>elasticsearch-maven-plugin</artifactId>
 				<version>@project.version@</version>
 				<configuration>
-					<version>6.0.0-beta2</version>
+					<version>6.0.0-rc1</version>
 				</configuration>
 				<executions>
 					<execution>
