--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jdk:
 os:
   - linux
 script:
-  - export MAVEN_OPTS="-Xmx512m"
+  - export MAVEN_OPTS="-Xms512m -Xmx512m -XX:MaxMetaspaceSize=192m"
   - mvn clean verify
