--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 		<maven.version>3.2.5</maven.version>
 		<aether.version>1.1.0</aether.version>
 		<integrationTest>*</integrationTest>
+		<!--
+                    this is set by Travis to true in the pre-run
+                    https://docs.travis-ci.com/user/languages/java/#projects-using-maven
+                -->
+		<skipTests>false</skipTests>
 	</properties>
 
 	<dependencies>
@@ -205,6 +210,8 @@
 				<artifactId>maven-invoker-plugin</artifactId>
 				<version>2.0.0</version>
 				<configuration>
+					<skipInstallation>${skipTests}</skipInstallation>
+					<skipInvocation>${skipTests}</skipInvocation>
 					<addTestClassPath>true</addTestClassPath>
 					<debug>false</debug>
 					<!--
