--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,5 +26,11 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
+    - name: configure Pagefile
+      uses: al-cheb/configure-pagefile-action@v1.2
+      with:
+        minimum-size: 8GB
+        maximum-size: 8GB
+        disk-root: "C:"
     - name: Build with Maven
       run: mvn -B clean verify --file pom.xml
