--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: configure Pagefile
+      if: matrix.os == 'windows-latest'
       uses: al-cheb/configure-pagefile-action@v1.2
       with:
         minimum-size: 8GB
