--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>2.2.17</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
